tests/NormalTests/paczka1/fuzzy1/54722361.err
Error in line 6: I5Gof35K A565 6,3
Error in line 4: QFboutMLzaD A727 2,0
Error in line 10: A565 S520 76,7
Error in line 13: A565 S477 6,5
Error in line 19: SkxrX4 A565 77,6
Error in line 25: QFboutMLzaD S477 19,1
Error in line 8: I5Gof35K A727 45,8
Error in line 26: QFboutMLzaD S520 47,4
Error in line 23: x6eErkDt A727 27,9
Error in line 35: x6eErkDt S520 77,6
